# awaitlist

./: README.md  pyproject.toml  sample.py
.github/workflows/: python-package.yml  releace.yaml
awaitlist/: awaitlist.py
tests/: test_awaitlist.py
